--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,4 @@ api-version: 1.18
 authors: [ rominer_11 ]
 description: For the knights server
 website: https://www.youtube.com/channel/UCYQe0MEe4mAFvryCRAAf52w
+depend: [ProtocolLib]
