--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,14 @@
 name: Knights
 version: '${project.version}'
 main: me.rominer_11.knights.Knights
-api-version: 1.18
+api-version: 1.19
 authors: [ rominer_11 ]
 description: For the knights server
 website: https://www.youtube.com/channel/UCYQe0MEe4mAFvryCRAAf52w
-depend: [ProtocolLib]
 commands:
   track:
+    description: Command
+  phase1:
+    description: Command
+  phase2:
     description: Command
